--- a/src/css/components.quadrant.scss
+++ b/src/css/components.quadrant.scss
@@ -1,6 +1,7 @@
 .c-quadrant {
   display: flex;
   width: 45%;
+  height: 50vh;
 
   &:nth-child(-n+2) { flex-direction: row-reverse; }
 
